--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -129,6 +129,7 @@ deny 2600:3c04::f03c:95ff:fe41:d42c;
 deny 2600:3c09::f03c:95ff:fe2d:cc40;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
+deny 2600:3c0e::f03c:95ff:feaa:89b0;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
@@ -217,7 +218,6 @@ deny 2605:6400:30:f858:2704:73e1:7085:12ef;
 deny 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 deny 2605:6400:30:f8d5::1;
 deny 2605:6400:30:f8da:2b2:a293:30ad:506d;
-deny 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 deny 2605:6400:30:f920:f523:28ef:3617:8b86;
 deny 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 deny 2605:6400:40:fe09::2;
@@ -348,7 +348,6 @@ deny 2a00:c70:1:185:246:84:179:1;
 deny 2a01:270:9847::1;
 deny 2a01:4262:1ab:ffff::133;
 deny 2a01:4f9:2b:75d::124:148;
-deny 2a01:4f9:c012:893a::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
