--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -26,6 +26,7 @@ allow 104.244.73.136;
 allow 104.244.73.190;
 allow 104.244.73.193;
 allow 104.244.73.43;
+allow 104.244.74.229;
 allow 104.244.74.23;
 allow 104.244.74.97;
 allow 104.244.75.140;
@@ -216,7 +217,6 @@ allow 172.105.174.195;
 allow 172.105.20.12;
 allow 172.232.141.150;
 allow 172.232.209.254;
-allow 172.233.57.187;
 allow 172.233.82.41;
 allow 172.234.228.174;
 allow 172.245.251.232;
@@ -234,7 +234,7 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.65.143.138;
 allow 176.97.114.202;
-allow 177.149.147.193;
+allow 177.149.158.29;
 allow 178.162.197.91;
 allow 178.17.170.144;
 allow 178.17.170.23;
@@ -1049,7 +1049,6 @@ allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c09::f03c:95ff:fe2d:cc40;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
-allow 2600:3c0e::f03c:95ff:feaa:89b0;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
@@ -1138,6 +1137,7 @@ allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
+allow 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
@@ -1343,7 +1343,6 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1851,7 +1850,6 @@ allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1911,6 +1909,7 @@ allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 78.159.131.96;
+allow 79.112.2.192;
 allow 79.124.60.174;
 allow 80.241.60.207;
 allow 80.67.167.81;
