Update lists at 20250403-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -234,7 +234,6 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.65.143.138;
 allow 176.97.114.202;
-allow 177.149.158.29;
 allow 178.162.197.91;
 allow 178.17.170.144;
 allow 178.17.170.23;
@@ -681,6 +680,7 @@ allow 194.26.192.77;
 allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
+allow 195.211.98.203;
 allow 195.47.238.176;
 allow 195.47.238.177;
 allow 195.47.238.178;
@@ -1040,7 +1040,6 @@ allow 2.58.56.220;
 allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -1660,6 +1659,7 @@ allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:1467::;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
+allow 2a12:6fc1::359;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
 allow 2a12:a800:1:1:2:58:56:35;
@@ -1713,6 +1713,7 @@ allow 2c0f:6c0:0:3::479d;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1725,7 +1726,6 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1900,7 +1900,6 @@ allow 66.78.40.182;
 allow 66.78.40.73;
 allow 67.219.109.141;
 allow 71.19.144.106;
-allow 72.14.179.10;
 allow 72.18.215.82;
 allow 72.211.49.235;
 allow 72.235.129.116;
@@ -1909,7 +1908,6 @@ allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 78.159.131.96;
-allow 79.112.2.192;
 allow 79.124.60.174;
 allow 80.241.60.207;
 allow 80.67.167.81;
