--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -234,7 +234,6 @@ set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.65.143.138;
 set_real_ip_from 176.97.114.202;
-set_real_ip_from 177.149.158.29;
 set_real_ip_from 178.162.197.91;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
@@ -681,6 +680,7 @@ set_real_ip_from 194.26.192.77;
 set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
+set_real_ip_from 195.211.98.203;
 set_real_ip_from 195.47.238.176;
 set_real_ip_from 195.47.238.177;
 set_real_ip_from 195.47.238.178;
@@ -1040,7 +1040,6 @@ set_real_ip_from 2.58.56.220;
 set_real_ip_from 2.58.56.35;
 set_real_ip_from 2.58.56.43;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
-set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
@@ -1660,6 +1659,7 @@ set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:1467::;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
+set_real_ip_from 2a12:6fc1::359;
 set_real_ip_from 2a12:a800:1:1:194:26:192:77;
 set_real_ip_from 2a12:a800:1:1:2:58:56:220;
 set_real_ip_from 2a12:a800:1:1:2:58:56:35;
@@ -1713,6 +1713,7 @@ set_real_ip_from 2c0f:6c0:0:3::479d;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
+set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.239.59;
@@ -1725,7 +1726,6 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
-set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1900,7 +1900,6 @@ set_real_ip_from 66.78.40.182;
 set_real_ip_from 66.78.40.73;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
-set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.18.215.82;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 72.235.129.116;
@@ -1909,7 +1908,6 @@ set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 78.159.131.96;
-set_real_ip_from 79.112.2.192;
 set_real_ip_from 79.124.60.174;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
