--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -40,6 +40,7 @@ deny 104.244.79.44;
 deny 104.244.79.50;
 deny 104.244.79.61;
 deny 107.172.31.218;
+deny 107.172.75.153;
 deny 107.172.76.141;
 deny 107.173.143.32;
 deny 107.174.146.25;
@@ -987,7 +988,6 @@ deny 23.151.8.8;
 deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.155.8.104;
-deny 23.184.48.13;
 deny 23.184.48.78;
 deny 23.191.200.10;
 deny 23.191.200.11;
@@ -1058,7 +1058,6 @@ deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
-deny 2602:fc24:18:a378::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
@@ -1343,6 +1342,7 @@ deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1630,8 +1630,6 @@ deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:424c::1;
 deny 2a0f:85c1:356:5bdd::beef;
-deny 2a0f:ca80:1337::b5a4:a762;
-deny 2a0f:ca80:1337::cd4a:eb83;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
@@ -1834,8 +1832,6 @@ deny 46.30.188.218;
 deny 46.38.243.210;
 deny 47.254.142.180;
 deny 47.89.193.230;
-deny 50.118.225.227;
-deny 50.118.225.229;
 deny 5.104.86.6;
 deny 51.15.59.15;
 deny 51.195.107.220;
@@ -1851,6 +1847,7 @@ deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.224;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
