--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -149,7 +149,6 @@ deny 2604:6600:0:42::2;
 deny 2604:b480:3:6::2;
 deny 2605:2700:0:2:a800:ff:fe39:574;
 deny 2605:6400:10:1008:1111:1111:1111:1111;
-deny 2605:6400:10:1060:411f:41d8:11fe:716f;
 deny 2605:6400:10:1362::2;
 deny 2605:6400:10:1ab:2605:6400:10:1ab;
 deny 2605:6400:10:44f::1;
@@ -216,7 +215,6 @@ deny 2605:6400:30:f858:2704:73e1:7085:12ef;
 deny 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 deny 2605:6400:30:f8d5::1;
 deny 2605:6400:30:f8da:2b2:a293:30ad:506d;
-deny 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 deny 2605:6400:30:f920:f523:28ef:3617:8b86;
 deny 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 deny 2605:6400:40:fe09::2;
@@ -421,7 +419,6 @@ deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -703,6 +700,7 @@ deny 2a0e:bfc0:0:d::d927;
 deny 2a0e:bfc0:0:e::7dc2;
 deny 2a0e:bfc0:0:f::e538;
 deny 2a0e:bfc7:0:2::46e2;
+deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7:0:4::6e7a;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
