--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -26,6 +26,7 @@ set_real_ip_from 104.244.73.136;
 set_real_ip_from 104.244.73.190;
 set_real_ip_from 104.244.73.193;
 set_real_ip_from 104.244.73.43;
+set_real_ip_from 104.244.74.229;
 set_real_ip_from 104.244.74.23;
 set_real_ip_from 104.244.74.97;
 set_real_ip_from 104.244.75.140;
@@ -136,7 +137,6 @@ set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
 set_real_ip_from 13.126.29.181;
-set_real_ip_from 135.181.4.118;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
@@ -1135,6 +1135,7 @@ set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 set_real_ip_from 2605:6400:30:f8d5::1;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
+set_real_ip_from 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 set_real_ip_from 2605:6400:40:fe09::2;
@@ -1387,6 +1388,7 @@ set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a09:b280:fe01:61::a;
+set_real_ip_from 2a0b:64c0:f802:4c::a;
 set_real_ip_from 2a0b:7140:1:1:5054:ff:fe12:2305;
 set_real_ip_from 2a0b:7140:6:1:5054:ff:fed8:5956;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
@@ -1652,6 +1654,34 @@ set_real_ip_from 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
 set_real_ip_from 2a0f:e586:f:f:e356:1bda:fc05:6784;
+set_real_ip_from 2a10:1fc0:10::19eb:717b;
+set_real_ip_from 2a10:1fc0:10::28fc:90d4;
+set_real_ip_from 2a10:1fc0:10::2a17:5b54;
+set_real_ip_from 2a10:1fc0:10::2cf4:6ba2;
+set_real_ip_from 2a10:1fc0:10::2d91:1a2d;
+set_real_ip_from 2a10:1fc0:10::3919:de17;
+set_real_ip_from 2a10:1fc0:10::3a90:8c02;
+set_real_ip_from 2a10:1fc0:10::3eb3:d1d0;
+set_real_ip_from 2a10:1fc0:10::40d8:83c;
+set_real_ip_from 2a10:1fc0:10::5138:4dfa;
+set_real_ip_from 2a10:1fc0:10::5719:261d;
+set_real_ip_from 2a10:1fc0:10::61d9:7617;
+set_real_ip_from 2a10:1fc0:10::694a:c359;
+set_real_ip_from 2a10:1fc0:10::6fde:4b8d;
+set_real_ip_from 2a10:1fc0:10::895d:abf9;
+set_real_ip_from 2a10:1fc0:10::8a03:d023;
+set_real_ip_from 2a10:1fc0:10::8d4d:eca2;
+set_real_ip_from 2a10:1fc0:10::a3a5:49da;
+set_real_ip_from 2a10:1fc0:10::a458:8b37;
+set_real_ip_from 2a10:1fc0:10::b571:1205;
+set_real_ip_from 2a10:1fc0:10::bf3f:d195;
+set_real_ip_from 2a10:1fc0:10::c7c7:2f84;
+set_real_ip_from 2a10:1fc0:10::d5a6:a292;
+set_real_ip_from 2a10:1fc0:10::d5d0:db30;
+set_real_ip_from 2a10:1fc0:10::d6b7:b3e9;
+set_real_ip_from 2a10:1fc0:10::dbe9:7852;
+set_real_ip_from 2a10:1fc0:10::ea87:5496;
+set_real_ip_from 2a10:1fc0:10::fa6c:cac5;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:1467::;
@@ -1711,7 +1741,6 @@ set_real_ip_from 3.110.92.168;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
-set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.239.59;
@@ -1724,6 +1753,7 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
+set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1933,6 +1963,21 @@ set_real_ip_from 84.211.226.13;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.183.128;
 set_real_ip_from 85.239.41.130;
+set_real_ip_from 85.239.55.11;
+set_real_ip_from 85.239.55.112;
+set_real_ip_from 85.239.55.123;
+set_real_ip_from 85.239.55.132;
+set_real_ip_from 85.239.55.168;
+set_real_ip_from 85.239.55.173;
+set_real_ip_from 85.239.55.184;
+set_real_ip_from 85.239.55.189;
+set_real_ip_from 85.239.55.192;
+set_real_ip_from 85.239.55.228;
+set_real_ip_from 85.239.55.230;
+set_real_ip_from 85.239.55.250;
+set_real_ip_from 85.239.55.31;
+set_real_ip_from 85.239.55.51;
+set_real_ip_from 85.239.55.80;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.54.28.49;
 set_real_ip_from 87.118.110.27;
@@ -1971,6 +2016,19 @@ set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.236.91;
+set_real_ip_from 91.227.77.108;
+set_real_ip_from 91.227.77.11;
+set_real_ip_from 91.227.77.139;
+set_real_ip_from 91.227.77.181;
+set_real_ip_from 91.227.77.193;
+set_real_ip_from 91.227.77.208;
+set_real_ip_from 91.227.77.209;
+set_real_ip_from 91.227.77.229;
+set_real_ip_from 91.227.77.237;
+set_real_ip_from 91.227.77.31;
+set_real_ip_from 91.227.77.36;
+set_real_ip_from 91.227.77.48;
+set_real_ip_from 91.227.77.97;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.243.24.163;
