--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -215,6 +215,7 @@ deny 2605:6400:30:f858:2704:73e1:7085:12ef;
 deny 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 deny 2605:6400:30:f8d5::1;
 deny 2605:6400:30:f8da:2b2:a293:30ad:506d;
+deny 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 deny 2605:6400:30:f920:f523:28ef:3617:8b86;
 deny 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 deny 2605:6400:40:fe09::2;
@@ -466,6 +467,7 @@ deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
+deny 2a0b:64c0:f802:4c::a;
 deny 2a0b:7140:1:1:5054:ff:fe12:2305;
 deny 2a0b:7140:6:1:5054:ff:fed8:5956;
 deny 2a0b:f4c0:16c:10::1;
@@ -731,6 +733,34 @@ deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:e356:1bda:fc05:6784;
+deny 2a10:1fc0:10::19eb:717b;
+deny 2a10:1fc0:10::28fc:90d4;
+deny 2a10:1fc0:10::2a17:5b54;
+deny 2a10:1fc0:10::2cf4:6ba2;
+deny 2a10:1fc0:10::2d91:1a2d;
+deny 2a10:1fc0:10::3919:de17;
+deny 2a10:1fc0:10::3a90:8c02;
+deny 2a10:1fc0:10::3eb3:d1d0;
+deny 2a10:1fc0:10::40d8:83c;
+deny 2a10:1fc0:10::5138:4dfa;
+deny 2a10:1fc0:10::5719:261d;
+deny 2a10:1fc0:10::61d9:7617;
+deny 2a10:1fc0:10::694a:c359;
+deny 2a10:1fc0:10::6fde:4b8d;
+deny 2a10:1fc0:10::895d:abf9;
+deny 2a10:1fc0:10::8a03:d023;
+deny 2a10:1fc0:10::8d4d:eca2;
+deny 2a10:1fc0:10::a3a5:49da;
+deny 2a10:1fc0:10::a458:8b37;
+deny 2a10:1fc0:10::b571:1205;
+deny 2a10:1fc0:10::bf3f:d195;
+deny 2a10:1fc0:10::c7c7:2f84;
+deny 2a10:1fc0:10::d5a6:a292;
+deny 2a10:1fc0:10::d5d0:db30;
+deny 2a10:1fc0:10::d6b7:b3e9;
+deny 2a10:1fc0:10::dbe9:7852;
+deny 2a10:1fc0:10::ea87:5496;
+deny 2a10:1fc0:10::fa6c:cac5;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:1467::;
