--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -103,6 +103,7 @@ allow 108.59.12.3;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
+allow 109.172.84.107;
 allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
@@ -185,6 +186,7 @@ allow 161.97.71.11;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
+allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -1061,6 +1063,7 @@ allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
+allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:101:200::53c8;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:4300:a:224:216:3cff:fe31:d55f;
@@ -1340,6 +1343,7 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1846,6 +1850,7 @@ allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
