Update lists at 20250405-1200

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -679,6 +679,7 @@ deny 194.15.115.212;
 deny 194.163.130.99;
 deny 194.163.157.49;
 deny 194.26.192.77;
+deny 194.53.137.156;
 deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
@@ -1605,6 +1606,7 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::50;
 deny 2a0d:bbc7:0:1::7f;
+deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1715,7 +1717,6 @@ deny 3.110.92.168;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
-deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.120.239.59;
@@ -1726,6 +1727,7 @@ deny 37.228.129.189;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
@@ -1908,7 +1910,7 @@ deny 77.48.28.239;
 deny 77.81.247.72;
 deny 78.142.18.219;
 deny 78.159.131.96;
-deny 79.112.2.192;
+deny 79.116.92.125;
 deny 79.124.60.174;
 deny 80.241.60.207;
 deny 80.67.167.81;
