--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -679,6 +679,7 @@ allow 194.15.115.212;
 allow 194.163.130.99;
 allow 194.163.157.49;
 allow 194.26.192.77;
+allow 194.53.137.156;
 allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
@@ -1605,6 +1606,7 @@ allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::50;
 allow 2a0d:bbc7:0:1::7f;
+allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1715,7 +1717,6 @@ allow 3.110.92.168;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1726,6 +1727,7 @@ allow 37.228.129.189;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1908,7 +1910,7 @@ allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 78.159.131.96;
-allow 79.112.2.192;
+allow 79.116.92.125;
 allow 79.124.60.174;
 allow 80.241.60.207;
 allow 80.67.167.81;
