--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -104,6 +104,7 @@ set_real_ip_from 109.169.33.163;
 set_real_ip_from 109.199.101.106;
 set_real_ip_from 109.199.101.134;
 set_real_ip_from 109.199.105.142;
+set_real_ip_from 109.228.160.190;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
 set_real_ip_from 109.70.100.2;
@@ -174,6 +175,7 @@ set_real_ip_from 156.229.232.115;
 set_real_ip_from 156.229.232.54;
 set_real_ip_from 156.229.232.98;
 set_real_ip_from 156.229.233.92;
+set_real_ip_from 157.180.70.94;
 set_real_ip_from 158.220.123.219;
 set_real_ip_from 158.69.252.116;
 set_real_ip_from 160.119.249.240;
@@ -820,10 +822,12 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:6;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
+set_real_ip_from 2001:67c:e28:1::103;
 set_real_ip_from 2001:67c:e28:1::2;
 set_real_ip_from 2001:67c:e28:1::3;
 set_real_ip_from 2001:67c:e28:1::4;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:9b0:25c:c100::913;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:d5b3::b;
 set_real_ip_from 2001:b030:2422::7234;
@@ -1258,6 +1262,7 @@ set_real_ip_from 2a00:c70:1:185:246:84:179:1;
 set_real_ip_from 2a01:270:9847::1;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
 set_real_ip_from 2a01:4f9:2b:75d::124:148;
+set_real_ip_from 2a01:4f9:c012:f5b1::1;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
@@ -1265,7 +1270,6 @@ set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
-set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1329,7 +1333,6 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
-set_real_ip_from 2a04:52c0:105:82c0::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:106:d219::1;
@@ -1593,6 +1596,7 @@ set_real_ip_from 2a0d:bbc7:0:1::3cc;
 set_real_ip_from 2a0d:bbc7:0:1::3d5;
 set_real_ip_from 2a0d:bbc7:0:1::50;
 set_real_ip_from 2a0d:bbc7:0:1::7f;
+set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:1d80:13:51e8::1;
 set_real_ip_from 2a0e:1d80:17:6f8d::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1647,6 +1651,7 @@ set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
 set_real_ip_from 2a0f:e586:f:f:e356:1bda:fc05:6784;
 set_real_ip_from 2a10:8a40:f313::29;
+set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:1467::;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:6fc1::359;
@@ -1704,6 +1709,7 @@ set_real_ip_from 3.110.92.168;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
+set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.239.59;
@@ -1714,7 +1720,6 @@ set_real_ip_from 37.228.129.189;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
-set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1749,6 +1754,8 @@ set_real_ip_from 45.141.215.167;
 set_real_ip_from 45.141.215.169;
 set_real_ip_from 45.141.215.17;
 set_real_ip_from 45.141.215.19;
+set_real_ip_from 45.141.215.197;
+set_real_ip_from 45.141.215.203;
 set_real_ip_from 45.141.215.21;
 set_real_ip_from 45.141.215.28;
 set_real_ip_from 45.141.215.40;
@@ -1763,6 +1770,7 @@ set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
 set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.148.10.169;
+set_real_ip_from 45.154.98.236;
 set_real_ip_from 45.157.11.6;
 set_real_ip_from 45.159.250.144;
 set_real_ip_from 45.61.185.172;
@@ -1815,7 +1823,6 @@ set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.24;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.165.243.36;
-set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1836,7 +1843,6 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.224;
 set_real_ip_from 5.255.100.227;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
@@ -1877,6 +1883,7 @@ set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.133.63.146;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.84.146;
+set_real_ip_from 64.190.76.13;
 set_real_ip_from 64.190.76.2;
 set_real_ip_from 64.190.76.3;
 set_real_ip_from 64.190.76.4;
@@ -1957,11 +1964,13 @@ set_real_ip_from 91.208.75.178;
 set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
+set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.236.91;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.138.145;
+set_real_ip_from 92.246.84.133;
 set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
