Update lists at 20250407-0000

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -412,7 +412,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:98a3::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
@@ -692,6 +691,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:44;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:bfc0:0:11::796d;
+allow 2a0e:bfc0:0:13::67bc;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc0:0:8::a84e;
 allow 2a0e:bfc0:0:d::d927;
@@ -785,3 +785,4 @@ allow 2a12:a800:9:1:193:26:115:161;
 allow 2a13:d207:0:461::1;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:3::479d;
+allow 2c0f:6c0:0:4::95ea;
