--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -662,6 +662,7 @@ allow 193.218.118.188;
 allow 193.218.118.56;
 allow 193.218.118.72;
 allow 193.218.118.89;
+allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.26.115.161;
 allow 193.26.115.43;
@@ -1332,7 +1333,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:98a3::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
@@ -1612,6 +1612,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:44;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:bfc0:0:11::796d;
+allow 2a0e:bfc0:0:13::67bc;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc0:0:8::a84e;
 allow 2a0e:bfc0:0:d::d927;
@@ -1705,11 +1706,11 @@ allow 2a12:a800:9:1:193:26:115:161;
 allow 2a13:d207:0:461::1;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:3::479d;
+allow 2c0f:6c0:0:4::95ea;
 allow 3.110.92.168;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1720,6 +1721,7 @@ allow 37.228.129.189;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1772,6 +1774,7 @@ allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.154.98.236;
 allow 45.157.11.6;
+allow 45.159.250.144;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1818,6 +1821,7 @@ allow 45.9.168.22;
 allow 45.94.31.68;
 allow 45.95.169.104;
 allow 45.95.169.130;
+allow 45.95.169.14;
 allow 45.95.169.230;
 allow 45.95.169.24;
 allow 45.95.169.255;
@@ -1842,7 +1846,6 @@ allow 51.81.222.62;
 allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
-allow 5.255.100.219;
 allow 5.255.100.227;
 allow 5.255.101.10;
 allow 5.255.101.131;
