--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -662,6 +662,7 @@ deny 193.218.118.188;
 deny 193.218.118.56;
 deny 193.218.118.72;
 deny 193.218.118.89;
+deny 193.237.221.228;
 deny 193.239.232.102;
 deny 193.26.115.161;
 deny 193.26.115.43;
@@ -1332,7 +1333,6 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:98a3::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
@@ -1612,6 +1612,7 @@ deny 2a0e:4005:1002:ffff:185:40:4:44;
 deny 2a0e:4005:1002:ffff:185:40:4:64;
 deny 2a0e:4005:1002:ffff:185:40:4:92;
 deny 2a0e:bfc0:0:11::796d;
+deny 2a0e:bfc0:0:13::67bc;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc0:0:8::a84e;
 deny 2a0e:bfc0:0:d::d927;
@@ -1705,11 +1706,11 @@ deny 2a12:a800:9:1:193:26:115:161;
 deny 2a13:d207:0:461::1;
 deny 2c0f:6c0:0:2::6983;
 deny 2c0f:6c0:0:3::479d;
+deny 2c0f:6c0:0:4::95ea;
 deny 3.110.92.168;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
-deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.120.239.59;
@@ -1720,6 +1721,7 @@ deny 37.228.129.189;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
@@ -1772,6 +1774,7 @@ deny 45.148.10.111;
 deny 45.148.10.169;
 deny 45.154.98.236;
 deny 45.157.11.6;
+deny 45.159.250.144;
 deny 45.61.185.172;
 deny 45.61.186.203;
 deny 45.61.187.200;
@@ -1818,6 +1821,7 @@ deny 45.9.168.22;
 deny 45.94.31.68;
 deny 45.95.169.104;
 deny 45.95.169.130;
+deny 45.95.169.14;
 deny 45.95.169.230;
 deny 45.95.169.24;
 deny 45.95.169.255;
@@ -1842,7 +1846,6 @@ deny 51.81.222.62;
 deny 5.181.80.107;
 deny 51.91.18.151;
 deny 5.196.95.34;
-deny 5.255.100.219;
 deny 5.255.100.227;
 deny 5.255.101.10;
 deny 5.255.101.131;
