Update lists at 20250407-0600

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -311,7 +311,6 @@ allow 185.158.249.155;
 allow 185.165.169.239;
 allow 185.165.171.84;
 allow 185.170.114.25;
-allow 185.177.151.34;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
@@ -672,6 +671,7 @@ allow 193.26.115.61;
 allow 193.32.162.96;
 allow 193.36.132.21;
 allow 193.41.226.117;
+allow 193.47.33.2;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
@@ -741,6 +741,7 @@ allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:304:200::a520;
 allow 2001:41d0:601:1100::6524;
+allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1100::912e;
 allow 2001:41d0:a:2a61::1;
 allow 2001:41d0:a:5c0::1;
@@ -1586,6 +1587,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
+allow 2a0c:dd80:1001::349;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
@@ -1780,7 +1782,6 @@ allow 45.141.215.97;
 allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.154.98.236;
-allow 45.157.11.6;
 allow 45.159.250.144;
 allow 45.61.185.172;
 allow 45.61.186.203;
@@ -1883,6 +1884,7 @@ allow 5.2.72.110;
 allow 5.2.79.190;
 allow 5.34.182.203;
 allow 54.36.101.21;
+allow 54.36.108.162;
 allow 54.36.209.253;
 allow 54.36.209.254;
 allow 54.38.33.53;
