--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -12,6 +12,7 @@ allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:304:200::a520;
 allow 2001:41d0:601:1100::6524;
+allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1100::912e;
 allow 2001:41d0:a:2a61::1;
 allow 2001:41d0:a:5c0::1;
@@ -662,6 +663,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
+allow 2a0c:dd80:1001::349;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
