--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -365,7 +365,6 @@ deny 2a02:c206:2240:5054::1;
 deny 2a02:c206:2240:5264::1;
 deny 2a02:c206:2240:8448::1;
 deny 2a02:c206:2241:2588::1;
-deny 2a02:c207:2247:3404::1;
 deny 2a02:c207:3002:8283::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
@@ -415,7 +414,6 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -467,6 +465,7 @@ deny 2a09:be40:28ff:50:be24:11ff:fecb:2a2f;
 deny 2a0b:64c0:f802:4c::a;
 deny 2a0b:7140:1:1:5054:ff:fe12:2305;
 deny 2a0b:7140:6:1:5054:ff:fed8:5956;
+deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -662,7 +661,6 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
-deny 2a0c:dd80:1001::349;
 deny 2a0c:e300::23;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
@@ -695,6 +693,7 @@ deny 2a0e:4005:1002:ffff:185:40:4:38;
 deny 2a0e:4005:1002:ffff:185:40:4:44;
 deny 2a0e:4005:1002:ffff:185:40:4:64;
 deny 2a0e:4005:1002:ffff:185:40:4:92;
+deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
 deny 2a0e:bfc0:0:13::67bc;
 deny 2a0e:bfc0:0:5::2;
